tests/reference/asr-test_operator_01-0f232bf.stderr
semantic error: Unary operator '-' not supported for type struct A
 --> tests/errors/test_operator_01.py:9:11
  |
9 |     print(-a)
  |           ^^ 
